<resources>
    <string name="app_name">Harper</string>
    <string name="download_address">下载地址</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="share_failed">分享失败</string>
    <string name="wechat">微信</string>
    <string name="wechat_moments">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qq_zone">QQ空间</string>
    <string name="found_new_version">发现新版本</string>
    <string name="ignore">跳过</string>
    <string name="update_now">立即更新</string>
    <string name="downloading">下载中…</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="title_activity_ten_map">TenMapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--幸运转盘-->
    <string name="iphone_8">iPhone 8</string>
    <string name="lucky_bead">周大福转运珠</string>
    <string name="beats_headset">Beats 耳机</string>
    <string name="xiaomi_scales">小米体重秤</string>
    <string name="baofeng_vr_glasses">暴风魔镜VR眼镜</string>
    <string name="iqiyi_month_card">爱奇艺月卡会员</string>
    <string name="iqiyi_month_card_no">爱奇艺月卡激活码</string>
</resources>