<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5"
        app:cardBackgroundColor="@color/cl_C0E8FD"
        app:cardCornerRadius="@dimen/dp6"
        app:cardElevation="@dimen/dp2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/dp5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp2_5"
                android:includeFontPadding="false"
                android:text="@string/share"
                android:textColor="@color/cl_101010"
                android:textSize="@dimen/sp12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp115"
                android:layout_margin="@dimen/dp10"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_wechat"
                    android:layout_width="@dimen/dp43"
                    android:layout_height="@dimen/dp115"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp25"
                    android:paddingBottom="@dimen/dp20"
                    android:text="@string/wechat"
                    android:textColor="#636262"
                    android:textSize="@dimen/sp12"
                    app:drawableTopCompat="@mipmap/icon_wechat" />

                <TextView
                    android:id="@+id/tv_wechat_moments"
                    android:layout_width="@dimen/dp43"
                    android:layout_height="@dimen/dp115"
                    android:layout_marginStart="@dimen/dp20"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp25"
                    android:paddingBottom="@dimen/dp20"
                    android:text="@string/wechat_moments"
                    android:textColor="#636262"
                    android:textSize="@dimen/sp12"
                    app:drawableTopCompat="@mipmap/icon_pyq" />

                <TextView
                    android:id="@+id/tv_qq"
                    android:layout_width="@dimen/dp43"
                    android:layout_height="@dimen/dp115"
                    android:layout_marginStart="@dimen/dp20"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp25"
                    android:paddingBottom="@dimen/dp20"
                    android:text="@string/qq"
                    android:textColor="#636262"
                    android:textSize="@dimen/sp12"
                    app:drawableTopCompat="@mipmap/icon_qq" />

                <TextView
                    android:id="@+id/tv_qq_zone"
                    android:layout_width="@dimen/dp43"
                    android:layout_height="@dimen/dp115"
                    android:layout_marginStart="@dimen/dp20"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp25"
                    android:paddingBottom="@dimen/dp20"
                    android:text="@string/qq_zone"
                    android:textColor="#636262"
                    android:textSize="@dimen/sp12"
                    app:drawableTopCompat="@mipmap/icon_qq_zone" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp105"
                android:layout_height="@dimen/dp35"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginBottom="@dimen/dp8"
                app:cardCornerRadius="4dp"
                app:cardElevation="@dimen/dp2">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/cl_101010"
                    android:textSize="@dimen/sp16" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>